--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/agency.min.css" rel="stylesheet">
+  <!--<link href="css/agency.min.css" rel="stylesheet"> -->
+  <link href="css/agency.css" rel="stylesheet">
 
 </head>
 
@@ -60,6 +61,13 @@
 
   <!-- Header -->
   <header class="masthead">
+    
+    <div class="fullscreen-video-wrap">
+
+    <video playsinline="playsinline" autoplay="autoplay" loop="true">
+      <source src="img/Cody Added/Beach.mp4" type="video/mp4">
+    </video>
+    </div>
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Software Developer, M.B.A., Combat Veteran</div>
@@ -110,7 +118,7 @@
             <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">M.B.A.</h4>
-          <p class="text-muted">Graduate with an M.B.A. with years of management experience. I have the technical
+          <p class="text-muted">Graduate with an M.B.A. and years of management experience. I have the technical
             knowledge to help the team create programs and the business acumen to communicate projects with leadership
             and clients! </p>
         </div>
@@ -121,18 +129,28 @@
           </span>
           <h4 class="service-heading">Combat Veteran</h4>
           <p class="text-muted">10 year combat veteran of the United States Air Force with travel to dozens of
-            countries and service in two wars. I have all the benefits of a modern day airman including dicipline,
+            countries and service in two wars. I have all the attributes of a modern day airman including dicipline,
             respect, and integrity.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section id="discgraph">
     <div class="row">
-      <img class="img-fluid" src="../Portfolio Project Final/img/Cody Added/Disc graph.png" alt="">
-      <h4>DISC Assesment</h4>
-      <p class="text-muted">The DISC Assesment measues ones preferred Behavioral style and Values Index.</p>
+      <img class="disc" src="../Portfolio Project Final/img/Cody Added/Disc graph.png" alt="">
+      <div class="col-md-4">
+        <p></p>  
+        <h4 class="service-heading">My DISC Assesment</h4>
+          <p class="text-muted">The DISC Assesment measures one's preferred Behavioral style and Values Index. D is for Decisive, I is for Interactive, S is for Stabilization, and C is for Cautious. 
+            Typically coders tend to be higher S and C.  However, as you can see that I am a very high D and I!
+            "But Cody, aren't high S and C's good for coding as they will be more heads down, predictable, and systematic?"  Absolutely!  S and C are very common among coders.  
+            "So what is special about being a D I coder?"  Because the D I Coder is the rare breed!  The diamond in the rough!  One who has a logical brain to build, work through, and understand code,
+            but also can interact with the team, leadership, and of course THE CLIENT!  The D I coder is one you want in the meetings to communicate with leadership and pitch clients with technical
+           explainations when necessary.  D I's are also the future managers and the best trainers!  When you find a D I coder- grab ahold of them- and don't let go!</p>
+           <p class="text-muted">So take my expereince with business, sales, and management and put that with my technical skills of Front End design and Back End framework- 
+             you will have an amazing team player, one hungry to always learn, future training and leader!</p>
+        </div>
     </div>
   </section>
 
@@ -238,7 +256,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Expereince</h2>
+          <h2 class="section-heading text-uppercase">Experience</h2>
           <h3 class="section-subheading text-muted">A timeline that would impress Forrest Gump</h3>
         </div>
       </div>
@@ -307,9 +325,9 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
+                <h4>SoCal
+                  <br>Beach
+                  <br>Bum</h4>
               </div>
             </li>
           </ul>
@@ -358,7 +376,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Send me a message</h2>
+          <h2 class="section-heading text-uppercase contactbot">Send me a message</h2>
           <h3 class="section-subheading text-muted">I would love to hear from</h3>
         </div>
       </div>
@@ -411,21 +429,11 @@
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
+              <li class="list-inline-item">
+                  <a href="https://www.linkedin.com/in/cody-boillot-mba-47475654/">
+                    <i class="fab fa-linkedin-in"></i>
+                  </a>
+                </li>
           </ul>
         </div>
         <div class="col-md-4">
