--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link js-scroll-trigger" href="#team"><b>Team</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact"><b></b>Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact"><b>Contact</b></a>
           </li>
         </ul>
       </div>
@@ -61,18 +61,17 @@
 
   <!-- Header -->
   <header class="masthead">
-    
+
     <div class="fullscreen-video-wrap">
 
-    <video playsinline="playsinline" autoplay="autoplay" loop="true">
-      <source src="img/Cody Added/Beach.mp4" type="video/mp4">
-    </video>
-    </div>
-    <div class="container">
-      <div class="intro-text">
-        <div class="intro-lead-in">Software Developer, M.B.A., Combat Veteran</div>
-        <div class="intro-heading text-uppercase">Cody J. Boillot</div>
-      </div>
+      <video playsinline="playsinline" autoplay loop="true" src="img/Cody Added/Beach2.mp4">
+      </video>
+      <center>
+      <div class="container intro-text ">
+            <div class="intro-lead-in">Software Developer, M.B.A., Combat Veteran</div>
+            <div class="intro-heading text-uppercase">Cody J. Boillot</div>
+    </div></center>   
+    
     </div>
   </header>
 
@@ -87,7 +86,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../Portfolio Project Final/img/Cody Added/cody_gta.png" alt="">
+          <img class="img-fluid" src="../Portfolio Project Final/img/Cody Added/cody_gta.png" alt="" id="codypicid">
         </a>
       </div>
     </center>
@@ -140,17 +139,23 @@
     <div class="row">
       <img class="disc" src="../Portfolio Project Final/img/Cody Added/Disc graph.png" alt="">
       <div class="col-md-4">
-        <p></p>  
+        <p></p>
         <h4 class="service-heading">My DISC Assesment</h4>
-          <p class="text-muted">The DISC Assesment measures one's preferred Behavioral style and Values Index. D is for Decisive, I is for Interactive, S is for Stabilization, and C is for Cautious. 
-            Typically coders tend to be higher S and C.  However, as you can see that I am a very high D and I!
-            "But Cody, aren't high S and C's good for coding as they will be more heads down, predictable, and systematic?"  Absolutely!  S and C are very common among coders.  
-            "So what is special about being a D I coder?"  Because the D I Coder is the rare breed!  The diamond in the rough!  One who has a logical brain to build, work through, and understand code,
-            but also can interact with the team, leadership, and of course THE CLIENT!  The D I coder is one you want in the meetings to communicate with leadership and pitch clients with technical
-           explainations when necessary.  D I's are also the future managers and the best trainers!  When you find a D I coder- grab ahold of them- and don't let go!</p>
-           <p class="text-muted">So take my expereince with business, sales, and management and put that with my technical skills of Front End design and Back End framework- 
-             you will have an amazing team player, one hungry to always learn, future training and leader!</p>
-        </div>
+        <p class="text-muted">The DISC Assesment measures one's preferred Behavioral style and Values Index. D is for
+          Decisive, I is for Interactive, S is for Stabilization, and C is for Cautious.
+          Typically coders tend to be higher S and C. However, as you can see that I am a very high D and I!
+          "But Cody, aren't high S and C's good for coding as they will be more heads down, predictable, and
+          systematic?" Absolutely! S and C are very common among coders.
+          "So what is special about being a D I coder?" Because the D I Coder is the rare breed! The diamond in the
+          rough! One who has a logical brain to build, work through, and understand code,
+          but also can interact with the team, leadership, and of course THE CLIENT! The D I coder is one you want in
+          the meetings to communicate with leadership and pitch clients with technical
+          explainations when necessary. D I's are also the future managers and the best trainers! When you find a D I
+          coder- grab ahold of them- and don't let go!</p>
+        <p class="text-muted">So take my expereince with business, sales, and management and put that with my technical
+          skills of Front End design and Back End framework-
+          you will have an amazing team player, one hungry to always learn, future training and leader!</p>
+      </div>
     </div>
   </section>
 
@@ -356,6 +361,12 @@
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/codipherus">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+
             </ul>
           </div>
         </div>
@@ -425,24 +436,25 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2018</span>
+          <span class="copyright">Copyright &copy; Cody J. Boillot 2018</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                  <a href="https://www.linkedin.com/in/cody-boillot-mba-47475654/">
-                    <i class="fab fa-linkedin-in"></i>
-                  </a>
-                </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/cody-boillot-mba-47475654/">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
           </ul>
         </div>
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a data-toggle="modal" href="#portfolioModal7">Privacy Policy</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a href="https://app.termly.io/document/terms-of-use-for-website/6c8d98f5-0f27-4014-bf89-39355937abe4">Terms
+                of Use</a>
             </li>
           </ul>
         </div>
@@ -667,6 +679,179 @@
       </div>
     </div>
   </div>
+
+  <!-- Privacy Policy Modal-->
+  <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <h1>Privacy Policy</h1>
+
+
+                <p>Effective date: August 29, 2018</p>
+
+
+                <p>Cody Boillot's Portfolio ("us", "we", or "our") operates the Cody Boillot's Portfolio website (the
+                  "Service").</p>
+
+                <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data
+                  when you use our Service and the choices you have associated with that data. This Privacy Policy for
+                  Cody Boillot's Portfolio is powered by <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator.php">FreePrivacyPolicy.com</a>.</p>
+
+                <p>We use your data to provide and improve the Service. By using the Service, you agree to the
+                  collection and use of information in accordance with this policy. Unless otherwise defined in this
+                  Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and
+                  Conditions, accessible from Cody Boillot's Portfolio</p>
+
+
+                <h2>Information Collection And Use</h2>
+
+                <p>We collect several different types of information for various purposes to provide and improve our
+                  Service to you.</p>
+
+                <h3>Types of Data Collected</h3>
+
+                <h4>Personal Data</h4>
+
+                <p>While using our Service, we may ask you to provide us with certain personally identifiable
+                  information that can be used to contact or identify you ("Personal Data"). Personally identifiable
+                  information may include, but is not limited to:</p>
+
+                <ul>
+                  <li>Email address</li>
+                  <li>First name and last name</li>
+                  <li>Phone number</li>
+                  <li>Cookies and Usage Data</li>
+                </ul>
+
+                <h4>Usage Data</h4>
+
+                <p>We may also collect information how the Service is accessed and used ("Usage Data"). This Usage Data
+                  may include information such as your computer's Internet Protocol address (e.g. IP address), browser
+                  type, browser version, the pages of our Service that you visit, the time and date of your visit, the
+                  time spent on those pages, unique device identifiers and other diagnostic data.</p>
+
+                <h4>Tracking & Cookies Data</h4>
+                <p>We use cookies and similar tracking technologies to track the activity on our Service and hold
+                  certain information.</p>
+                <p>Cookies are files with small amount of data which may include an anonymous unique identifier.
+                  Cookies are sent to your browser from a website and stored on your device. Tracking technologies also
+                  used are beacons, tags, and scripts to collect and track information and to improve and analyze our
+                  Service.</p>
+                <p>You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent.
+                  However, if you do not accept cookies, you may not be able to use some portions of our Service.</p>
+                <p>Examples of Cookies we use:</p>
+                <ul>
+                  <li><strong>Session Cookies.</strong> We use Session Cookies to operate our Service.</li>
+                  <li><strong>Preference Cookies.</strong> We use Preference Cookies to remember your preferences and
+                    various settings.</li>
+                  <li><strong>Security Cookies.</strong> We use Security Cookies for security purposes.</li>
+                </ul>
+
+                <h2>Use of Data</h2>
+
+                <p>Cody Boillot's Portfolio uses the collected data for various purposes:</p>
+                <ul>
+                  <li>To provide and maintain the Service</li>
+                  <li>To notify you about changes to our Service</li>
+                  <li>To allow you to participate in interactive features of our Service when you choose to do so</li>
+                  <li>To provide customer care and support</li>
+                  <li>To provide analysis or valuable information so that we can improve the Service</li>
+                  <li>To monitor the usage of the Service</li>
+                  <li>To detect, prevent and address technical issues</li>
+                </ul>
+
+                <h2>Transfer Of Data</h2>
+                <p>Your information, including Personal Data, may be transferred to — and maintained on — computers
+                  located outside of your state, province, country or other governmental jurisdiction where the data
+                  protection laws may differ than those from your jurisdiction.</p>
+                <p>If you are located outside United States and choose to provide information to us, please note that
+                  we transfer the data, including Personal Data, to United States and process it there.</p>
+                <p>Your consent to this Privacy Policy followed by your submission of such information represents your
+                  agreement to that transfer.</p>
+                <p>Cody Boillot's Portfolio will take all steps reasonably necessary to ensure that your data is
+                  treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data
+                  will take place to an organization or a country unless there are adequate controls in place including
+                  the security of your data and other personal information.</p>
+
+                <h2>Disclosure Of Data</h2>
+
+                <h3>Legal Requirements</h3>
+                <p>Cody Boillot's Portfolio may disclose your Personal Data in the good faith belief that such action
+                  is necessary to:</p>
+                <ul>
+                  <li>To comply with a legal obligation</li>
+                  <li>To protect and defend the rights or property of Cody Boillot's Portfolio</li>
+                  <li>To prevent or investigate possible wrongdoing in connection with the Service</li>
+                  <li>To protect the personal safety of users of the Service or the public</li>
+                  <li>To protect against legal liability</li>
+                </ul>
+
+                <h2>Security Of Data</h2>
+                <p>The security of your data is important to us, but remember that no method of transmission over the
+                  Internet, or method of electronic storage is 100% secure. While we strive to use commercially
+                  acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</p>
+
+                <h2>Service Providers</h2>
+                <p>We may employ third party companies and individuals to facilitate our Service ("Service Providers"),
+                  to provide the Service on our behalf, to perform Service-related services or to assist us in
+                  analyzing how our Service is used.</p>
+                <p>These third parties have access to your Personal Data only to perform these tasks on our behalf and
+                  are obligated not to disclose or use it for any other purpose.</p>
+
+
+
+                <h2>Links To Other Sites</h2>
+                <p>Our Service may contain links to other sites that are not operated by us. If you click on a third
+                  party link, you will be directed to that third party's site. We strongly advise you to review the
+                  Privacy Policy of every site you visit.</p>
+                <p>We have no control over and assume no responsibility for the content, privacy policies or practices
+                  of any third party sites or services.</p>
+
+
+                <h2>Children's Privacy</h2>
+                <p>Our Service does not address anyone under the age of 18 ("Children").</p>
+                <p>We do not knowingly collect personally identifiable information from anyone under the age of 18. If
+                  you are a parent or guardian and you are aware that your Children has provided us with Personal Data,
+                  please contact us. If we become aware that we have collected Personal Data from children without
+                  verification of parental consent, we take steps to remove that information from our servers.</p>
+
+
+                <h2>Changes To This Privacy Policy</h2>
+                <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the
+                  new Privacy Policy on this page.</p>
+                <p>We will let you know via email and/or a prominent notice on our Service, prior to the change
+                  becoming effective and update the "effective date" at the top of this Privacy Policy.</p>
+                <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy
+                  Policy are effective when they are posted on this page.</p>
+
+
+                <h2>Contact Us</h2>
+                <p>If you have any questions about this Privacy Policy, please contact us:</p>
+                <ul>
+                  <li>By email: boillot.cody@gmail.com</li>
+
+                </ul>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close Project</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
