--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services"><b>Services</b></a>
+            <a class="nav-link js-scroll-trigger" href="#services"><b>Home</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio"><b>Portfolio</b></a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio"><b>Overview</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about"><b>About</b></a>
+            <a class="nav-link js-scroll-trigger" href="#about"><b>Experience</b></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team"><b>Team</b></a>
+            <a class="nav-link js-scroll-trigger" href="#team"><b>Connect</b></a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact"><b>Contact</b></a>
@@ -64,7 +64,7 @@
 
     <div class="fullscreen-video-wrap">
 
-      <video playsinline="playsinline" autoplay loop="true" src="img/Cody_Added/Beach3.mp4">
+      <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="true" src="img/Cody_Added/Beach3.mp4">
       </video>
       <center>
       <div class="container intro-text ">
@@ -248,8 +248,8 @@
             <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/Lrg Thumb for Port (blk).jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Unannounced Project 2</h4>
-            <p class="text-muted">More Photoshop Fun</p>
+            <h4>Beach Video</h4>
+            <p class="text-muted">Adobe Premeir Pro and After Effects</p>
           </div>
         </div>
       </div>
@@ -443,6 +443,11 @@
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/cody-boillot-mba-47475654/">
                 <i class="fab fa-linkedin-in"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://github.com/codipherus">
+                <i class="fab fa-github"></i>
               </a>
             </li>
           </ul>
