--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <i class="fa fa-plus fa-3x"></i>
             </div>
           </div>
-          <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/cody_gta.png" alt="" id="codypicid">
+          <img class="img-fluid" src="./img/Cody_Added/cody_gta.png" alt="" id="codypicid">
         </a>
       </div>
     </center>
@@ -137,7 +137,7 @@
 
   <section id="discgraph">
     <div class="row">
-      <img class="disc" src="../Portfolio_Project_Final/img/Cody_Added/Disc graph.png" alt="">
+      <img class="disc" src="./img/Cody_Added/Disc graph.png" alt="">
       <div class="col-md-4">
         <p></p>
         <h4 class="service-heading">My DISC Assesment</h4>
@@ -175,7 +175,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/npcblkbg.jpg" alt="">
+            <img class="img-fluid" src="./img/Cody_Added/npcblkbg.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>NPC Generator</h4>
@@ -189,7 +189,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/creatureblkbg.jpg" alt="">
+            <img class="img-fluid" src="./img/Cody_Added/creatureblkbg.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>CSS Creature</h4>
@@ -203,7 +203,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/storeappblkbg.jpg" alt="">
+            <img class="img-fluid" src="./img/Cody_Added/storeappblkbg.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Store App</h4>
@@ -217,7 +217,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/Tav1150wBlkbg.jpg" alt="">
+            <img class="img-fluid" src="./img/Cody_Added/Tav1150wBlkbg.jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Tavern Eleven Fifty</h4>
@@ -231,7 +231,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/Lrg Thumb for Port (blk).jpg" alt="">
+            <img class="img-fluid" src="./img/Cody_Added/Lrg Thumb for Port (blk).jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Unannounced Project 1</h4>
@@ -245,7 +245,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/Lrg Thumb for Port (blk).jpg" alt="">
+            <img class="img-fluid" src="./img/Cody_Added/Lrg Thumb for Port (blk).jpg" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Beach Video</h4>
@@ -270,7 +270,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/1150time.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="./img/Cody_Added/1150time.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -285,7 +285,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/saleslogo.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="./img/Cody_Added/saleslogo.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -299,7 +299,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/ublogo.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="./img/Cody_Added/ublogo.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -314,7 +314,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="../Portfolio_Project_Final/img/Cody_Added/airforcelogo.jpg"
+                <img class="rounded-circle img-fluid" src="./img/Cody_Added/airforcelogo.jpg"
                   alt="">
               </div>
               <div class="timeline-panel">
@@ -352,7 +352,7 @@
       <center>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="../Portfolio_Project_Final/img/Cody_Added/codyred2.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="./img/Cody_Added/codyred2.jpg" alt="">
             <h4>Social Media</h4>
             <p class="text-muted">All over the where</p>
             <ul class="list-inline social-buttons">
