--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -28,7 +28,8 @@
 
 <body id="page-top">
 
-  <!-- Navigation -->
+  <!--Navigation -->
+
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Cody J. Boillot</a>
@@ -64,14 +65,19 @@
 
     <div class="fullscreen-video-wrap">
 
-      <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="true" src="img/Cody_Added/Beach3.mp4">
+<!--TODO: The following line is from worldofwarcraft.com, trying to use it to get rid of video when user device has less than ~600px width-->
+        <div class="hide" media-wide="!hide" queryselectoralways="0" media-original="hide"><div class="space-huge"></div><div class="space-large"></div></div>
+<!--*********          The styling is in _masterhead.scss      ****************-->
+
+
+      <video id="Beach3" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="true" src="img/Cody_Added/Beach3.mp4">
       </video>
-      <center>
+
       <div class="container intro-text ">
-            <div class="intro-lead-in">Software Developer, M.B.A., Combat Veteran</div>
-            <div class="intro-heading text-uppercase">Cody J. Boillot</div>
-    </div></center>   
-    
+        <div class="intro-lead-in">Software Developer, M.B.A., Combat Veteran</div>
+        <div class="intro-heading text-uppercase">Cody J. Boillot</div>
+      </div>
+
     </div>
   </header>
 
@@ -135,30 +141,35 @@
     </div>
   </section>
 
-  <section id="discgraph">
-    <div class="row">
-      <img class="disc" src="./img/Cody_Added/Disc graph.png" alt="">
-      <div class="col-md-4">
+  <div class="row_disc">
+    <div class="column_disc1">
+      <center>
+        <img class="disc responsive" src="./img/Cody_Added/Disc_graph_simple.jpg" alt="">
+      </center>
+      <div class="column_disc2">
         <p></p>
-        <h4 class="service-heading">My DISC Assesment</h4>
-        <p class="text-muted">The DISC Assesment measures one's preferred Behavioral style and Values Index. D is for
+        <h4 class="service-heading" style="margin-left: 50px; margin-right:50px;">My DISC Assesment</h4>
+        <p class="text-muted" style="margin-left: 50px; margin-right:50px;"> The DISC Assesment measures one's
+          preferred Behavioral style and Values Index. D is for
           Decisive, I is for Interactive, S is for Stabilization, and C is for Cautious.
           Typically coders tend to be higher S and C. However, as you can see that I am a very high D and I!
           "But Cody, aren't high S and C's good for coding as they will be more heads down, predictable, and
           systematic?" Absolutely! S and C are very common among coders.
-          "So what is special about being a D I coder?" Because the D I Coder is the rare breed! The diamond in the
+          "So what is special about being a D I coder?" Because
+          the D I Coder is the rare breed! The diamond in the
           rough! One who has a logical brain to build, work through, and understand code,
-          but also can interact with the team, leadership, and of course THE CLIENT! The D I coder is one you want in
-          the meetings to communicate with leadership and pitch clients with technical
-          explainations when necessary. D I's are also the future managers and the best trainers! When you find a D I
-          coder- grab ahold of them- and don't let go!</p>
-        <p class="text-muted">So take my expereince with business, sales, and management and put that with my technical
+          but also can interact with the team, leadership, and of course THE CLIENT! The D I coder is one you want
+          in the meetings to communicate with leadership and pitch clients with technical
+          explainations when necessary. D I's are also the future managers and the best trainers! When you find a D
+          I coder- grab ahold of them- and don't let go!
+        </p>
+        <p class="text-muted" style="margin-left: 50px; margin-right:50px;">So take my expereince with business,
+          sales, and management and put that with my technical
           skills of Front End design and Back End framework-
           you will have an amazing team player, one hungry to always learn, future training and leader!</p>
       </div>
     </div>
-  </section>
-
+  </div>
   <!-- Portfolio Grid -->
   <section class="bg-light" id="portfolio">
     <div class="container">
@@ -314,8 +325,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="./img/Cody_Added/airforcelogo.jpg"
-                  alt="">
+                <img class="rounded-circle img-fluid" src="./img/Cody_Added/airforcelogo.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -372,11 +382,7 @@
         </div>
       </center>
 
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">LinkedIn</p>
-        </div>
-      </div>
+
     </div>
   </section>
 
@@ -484,7 +490,8 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">NPC Generator</h2>
-                <p class="item-intro text-muted">ASP.net App Project with CRUD elements and Random generation from tables</p>
+                <p class="item-intro text-muted">ASP.net App Project with CRUD elements and Random generation from
+                  tables</p>
                 <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                   Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia
