deploy ready no mobile

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                 <img class="img-fluid d-block mx-auto" src="./img/Cody_Added/Portfolio_modal_creature.jpg" alt="">
                
                 <ul class="list-inline">
-                  <li>Date: September 2018</li>
+                  <li><a href="https://codepen.io/Codipherus/pen/EpKbBg">See the animation on CodePen.io</a></li>
                   
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
