--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
       </div>
     </center>
   </div>
+  <div>
+    <form>
+      <input type="button" value="Put Your Text Here" onclick="window.location.href='https://codipherus.github.io/Mobile-Portfolio/mobileport.jpg'" />
+      </form>
+  </div>
   <!-- Services -->
   <section id="services2">
     <div class="container">
@@ -388,7 +393,7 @@
 
 
 
-  <!-- Contact -->
+  <!-- Contact
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -435,7 +440,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer>
