--- a/index.html
+++ b/index.html
@@ -3,10 +3,31 @@
 
 <head>
 
+
+
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="./img/Cody_Added/Favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="./img/Cody_Added/Favicon/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="./img/Cody_Added/Favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="./img/Cody_Added/Favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="./img/Cody_Added/Favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="./img/Cody_Added/Favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="./img/Cody_Added/Favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="./img/Cody_Added/Favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/Cody_Added/Favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="./img/Cody_Added/Favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/Cody_Added/Favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="./img/Cody_Added/Favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/Cody_Added/Favicon/favicon-16x16.png">
+  <link rel="manifest" href="./img/Cody_Added/Favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="./img/Cody_Added/Favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
   <title>Cody J. Boillot Portfolio</title>
 
@@ -23,6 +44,9 @@
   <!-- Custom styles for this template -->
   <!--<link href="css/agency.min.css" rel="stylesheet"> -->
   <link href="css/agency.css" rel="stylesheet">
+
+
+
 
 </head>
 
@@ -66,7 +90,7 @@
     <div class="fullscreen-video-wrap">
 
 <!--TODO: The following line is from worldofwarcraft.com, trying to use it to get rid of video when user device has less than ~600px width-->
-        <div class="hide" media-wide="!hide" queryselectoralways="0" media-original="hide"><div class="space-huge"></div><div class="space-large"></div></div>
+        <!-- <div class="hide" media-wide="!hide" queryselectoralways="0" media-original="hide"><div class="space-huge"></div><div class="space-large"></div></div> -->
 <!--*********          The styling is in _masterhead.scss      ****************-->
 
 
@@ -97,11 +121,11 @@
       </div>
     </center>
   </div>
-  <div>
+  <!-- <div>
     <form>
       <input type="button" value="Put Your Text Here" onclick="window.location.href='https://codipherus.github.io/Mobile-Portfolio/mobileport.jpg'" />
       </form>
-  </div>
+  </div> -->
   <!-- Services -->
   <section id="services2">
     <div class="container">
