--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
                 <img class="img-fluid d-block mx-auto" src="./img/Cody_Added/Portfolio_modal_NPC.jpg" alt="">
                 
                 <ul class="list-inline">
-                  <li> <p class="item-intro text-muted">September 2018</p></li>
+                  <li><a href="https://npcgeneratorwebmvc20180905105046.azurewebsites.net/">WEB.MVC Project</a></li>
                   
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
