--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
 
 
-  <!-- Contact
+  <!-- Contact -->
   <section id="contact">
     <div class="container">
       <div class="row">
@@ -464,7 +464,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <!-- Footer -->
   <footer>
